NetBSD Problem Report #41950

From jakllsch@wormulon.kollasch.net  Thu Aug 27 20:46:16 2009
Return-Path: <jakllsch@wormulon.kollasch.net>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 6241963B121
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 27 Aug 2009 20:46:16 +0000 (UTC)
Message-Id: <20090827204614.5CD5062D5@wormulon.kollasch.net>
Date: Thu, 27 Aug 2009 20:46:14 +0000 (UTC)
From: jakllsch@kollasch.net
Reply-To: jakllsch@kollasch.net
To: gnats-bugs@gnats.NetBSD.org
Subject: Xorg -configure is broken
X-Send-Pr-Version: 3.95

>Number:         41950
>Category:       xsrc
>Synopsis:       Xorg -configure produces bogus xorg.conf
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    xsrc-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Aug 27 20:50:01 +0000 2009
>Closed-Date:    Sat Jan 09 01:28:25 +0000 2010
>Last-Modified:  Sat Jan 09 01:30:05 +0000 2010
>Originator:     Jonathan A. Kollasch
>Release:        NetBSD -current from 20090827
>Organization:
>Environment:
Architecture: x86_64
Machine: amd64
>Description:
Xorg -configure in -current produces a config file that contains a
"Device" Section w/ the "radeonhd" Driver for every existing PCI
function in my machine.  This also includes matching Monitor
sections for each bogus Device section.
>How-To-Repeat:
Install -current w/ xsrc-xorg, run Xorg -configure,
examine/use resulting xorg.conf.
>Fix:
I'd look at radeonhd's matching code.

>Release-Note:

>Audit-Trail:
From: "Jonathan A. Kollasch" <jakllsch@kollasch.net>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: xsrc/41950: Xorg -configure is broken
Date: Wed, 25 Nov 2009 21:45:10 +0000

 The following patch fixes this:

 Index: external/mit/xf86-video-radeonhd/dist/src/rhd_id.c
 ===================================================================
 RCS file: /cvsroot/xsrc/external/mit/xf86-video-radeonhd/dist/src/rhd_id.c,v
 retrieving revision 1.1.1.4
 diff -u -r1.1.1.4 rhd_id.c
 --- external/mit/xf86-video-radeonhd/dist/src/rhd_id.c	9 Nov 2009 01:43:57 -0000	1.1.1.4
 +++ external/mit/xf86-video-radeonhd/dist/src/rhd_id.c	25 Nov 2009 21:41:07 -0000
 @@ -112,7 +112,7 @@
  # define RHD_DEVICE_MATCH(d, i) \
      { 0x1002, (d), PCI_MATCH_ANY, PCI_MATCH_ANY, 0, 0, (i) }
  # define PCI_ID_LIST struct pci_id_match RHDDeviceMatch[]
 -# define LIST_END { 0, 0, (~0), (~0), 0, 0, 0 }
 +# define LIST_END { 0, 0, 0, 0, 0, 0, 0 }
  #else
  resRange res_none[] = { _END };


From: "Jonathan A. Kollasch" <jakllsch@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41950 CVS commit: xsrc/external/mit/xf86-video-radeonhd/dist/src
Date: Mon, 28 Dec 2009 18:50:28 +0000

 Module Name:	xsrc
 Committed By:	jakllsch
 Date:		Mon Dec 28 18:50:28 UTC 2009

 Modified Files:
 	xsrc/external/mit/xf86-video-radeonhd/dist/src: rhd_id.c

 Log Message:
 Fix incorrect LIST_END macro.

 From xf86-video-radeonhd commit cc1bb50bb44354be7793e4fc45c625746571ec96.

 Fixes PR/41950.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.1.4 -r1.2 \
     xsrc/external/mit/xf86-video-radeonhd/dist/src/rhd_id.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: jakllsch@NetBSD.org
State-Changed-When: Mon, 28 Dec 2009 18:58:19 +0000
State-Changed-Why:
pullup-5 #1214


State-Changed-From-To: pending-pullups->closed
State-Changed-By: snj@NetBSD.org
State-Changed-When: Sat, 09 Jan 2010 01:28:25 +0000
State-Changed-Why:
Pulled up.


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41950 CVS commit: [netbsd-5] xsrc/external/mit/xf86-video-radeonhd/dist/src
Date: Sat, 9 Jan 2010 01:27:39 +0000

 Module Name:	xsrc
 Committed By:	snj
 Date:		Sat Jan  9 01:27:39 UTC 2010

 Modified Files:
 	xsrc/external/mit/xf86-video-radeonhd/dist/src [netbsd-5]: rhd_id.c

 Log Message:
 Pull up following revision(s) (requested by jakllsch in ticket #1214):
 	external/mit/xf86-video-radeonhd/dist/src/rhd_id.c: revision 1.2
 Fix incorrect LIST_END macro.
 From xf86-video-radeonhd commit cc1bb50bb44354be7793e4fc45c625746571ec96.
 Fixes PR/41950.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.1.2.2.1 -r1.1.1.2.2.2 \
     xsrc/external/mit/xf86-video-radeonhd/dist/src/rhd_id.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.