Fix incorrect LIST_END macro.

From xf86-video-radeonhd commit cc1bb50bb44354be7793e4fc45c625746571ec96.

Fixes PR/41950.